AUTOMAKE_OPTIONS=foreign

bin_PROGRAMS=data_exchange_gw_fcgi

data_exchange_gw_fcgi_SOURCES=src/curl_client.hpp src/client_http.hpp src/renesolalog.hpp src/serverResource.hpp src/main.cpp src/mysql/MySql.cpp src/mysql/MySqlException.cpp src/mysql/MySqlPreparedStatement.cpp src/mysql/OutputBinder.cpp
data_exchange_gw_fcgi_LDADD=lib/librestbed.a